# OrderFlow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY_006.md  README.md  SSOT_SPEC.md  docker-compose.yml  pyproject.toml  smtp_ingest.Dockerfile
.specify/memory/: constitution.md
backend/: alembic.ini  pytest.ini
backend/alembic/versions/: 001_create_feedback_tables.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_org_table.py  002_create_user_and_audit_tables.py  003_create_customer_tables.py  004_create_product_tables.py  005_create_inbound_message_table.py  006_create_document_table.py  007_create_extraction_run_table.py  008_create_ai_call_log_table.py  009_create_draft_order_table.py  010_create_draft_order_line_table.py  011_create_customer_price_table.py  012_create_sku_mapping_table.py  013_create_customer_detection_candidate.py  014_create_validation_issue_table.py  015_create_erp_connector_tables.py  016_create_product_embedding_table.py  017_create_erp_connection_tables.py  018_add_missing_foreign_keys.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: generate_test_email.py  seed_admin.py  start_smtp_server.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/src/ai/: __init__.py  call_logger.py  ports.py
backend/src/audit/: __init__.py  router.py  schemas.py  service.py
backend/src/auth/: __init__.py  dependencies.py  jwt.py  password.py  password_policy.py  rate_limit.py  roles.py  router.py  schemas.py
backend/src/catalog/: README.md  __init__.py  import_service.py  router.py  schemas.py
backend/src/connectors/: README.md  __init__.py  base_connector.py  encryption.py  ports.py  push_service.py  registry.py
backend/src/customers/: __init__.py  import_service.py  router.py  schemas.py
backend/src/domain/: __init__.py
backend/src/draft_orders/: __init__.py  approval.py  confidence.py  push.py  ready_check.py  router.py  router_approve.py  schemas.py  service.py  status.py
backend/src/extraction/: README.md  USAGE_EXAMPLE.py  __init__.py  decision_logic.py  hallucination_guards.py  layout_fingerprint.py  prompts.py  uom_normalization.py
backend/src/feedback/: README.md  __init__.py  analytics.py  endpoints.py  models.py  services.py
backend/src/inbox/: __init__.py  router.py  schemas.py
backend/src/matching/: ALGORITHM.md  README.md  __init__.py  hybrid_matcher.py  ports.py  router.py  (+2 more)
backend/tests/: README.md  __init__.py  conftest.py
docker/: init-extensions.sql
docs/: EMBEDDING_ARCHITECTURE.md  customer_import_guide.md  database-configuration.md  migrations.md  observability-quick-reference.md  observability.md  product_import_template.csv  sample_customers.csv  smtp-ingest.md  tenancy-quick-reference.md  tenancy.md
docs/api/: catalog-api.md
frontend/: README.md  next.config.js  package.json
scripts/: fix_migration_conflicts.py
specs/: AUDIT-api.md  AUDIT-code-quality.md  AUDIT-database.md  AUDIT-infrastructure.md  AUDIT-performance.md  AUDIT-security.md  AUDIT-test-coverage.md  SHIP-READINESS.md
specs/001-platform-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-rbac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tenancy-isolation/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-customer-management/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-object-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-smtp-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-document-upload/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-inbox-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-extraction-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-extractors-rule-based/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-llm-provider-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-extractors-llm/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-draft-orders-core/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-draft-orders-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-catalog-products/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-embedding-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-matching-engine/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-customer-detection/: ALGORITHM.md  IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-validation-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-customer-prices/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-erp-connector-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-dropzone-connector/: IMPLEMENTATION.md  INTEGRATION_NOTE.md  SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-approve-push-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-feedback-learning/: IMPLEMENTATION.md  SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-observability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-data-retention/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+233 files in other folders)
