[project]
name = "orderflow"
version = "0.1.0"
description = "Multi-Tenant B2B Order Automation Platform for DACH Region"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "OrderFlow Team"}
]
keywords = ["b2b", "order-automation", "erp", "wholesale", "distribution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://docs.orderflow.io"
Repository = "https://github.com/orderflow/orderflow"

# =============================================================================
# BUILD SYSTEM
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend/src"]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=backend/src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require database)",
    "e2e: End-to-end tests (full stack)",
    "security: Security-focused tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
asyncio_mode = "auto"

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================

[tool.coverage.run]
source = ["backend/src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "coverage_html"

# =============================================================================
# RUFF CONFIGURATION (Linting & Formatting)
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "LOG",    # flake8-logging
    "PERF",   # Perflint
    "FURB",   # refurb
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "S101",   # assert used (needed for tests)
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # single line implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "ARG",    # unused arguments allowed in tests (fixtures)
    "FBT",    # boolean trap allowed in tests
    "PLR2004", # magic values allowed in tests
    "S106",   # hardcoded passwords allowed in tests
]
"backend/migrations/**/*.py" = [
    "ERA001", # commented code allowed in migrations
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

# =============================================================================
# MYPY CONFIGURATION (Type Checking)
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "pdfplumber.*",
    "openpyxl.*",
    "chardet.*",
    "magic.*",
    "aiosmtpd.*",
]
ignore_missing_imports = true

# =============================================================================
# BLACK CONFIGURATION (Formatting - fallback if not using ruff format)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | build
    | dist
    | migrations
)/
'''

# =============================================================================
# BANDIT CONFIGURATION (Security Scanning)
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]  # assert used

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]
